# aura-work

./: .all-contributorsrc  .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .weblate  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FINAL_HARDENING_REPORT.md  GOVERNANCE.md  HARDENING_REPORT.md  LICENSE  MAINTAINERS  NOTICE  README.ar.md  README.md  ROADMAP.md  SECURITY-POLICY.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES  aura.jsonc  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.sidecars.config.ts
.github/: CODEOWNERS  codeql-config.yml  labeler.yml  pull_request_template.md
PRD/: PRD (1).md
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: installer-hooks.nsh
apps/desktop/src-tauri/resources/: pricing-overrides.json  pricing-v1.json
apps/desktop/src-tauri/src/: agent.rs  audit.rs  bridge.rs  bridge_helper.rs  bridge_internal.rs  browser.rs  cloud.rs  cloud_crypto.rs  cloud_helper.rs  computer_use.rs  db.rs  diagnostics.rs  edit_resolutions.rs  extensions_helper.rs  files.rs  git.rs  i18n.rs  lib.rs  mcp.rs  memory.rs  onboarding.rs  packaging.rs  permissions.rs  plugins.rs  pricing.rs  projects.rs  providers.rs  scheduled.rs  shell.rs  sidecar_auth.rs  sidecars.rs  task_snapshots.rs  task_writes.rs  tasks.rs  updates.rs  vault.rs  vm.rs  web.rs
bundle/: manifest.json
docs/: CNAME  README.ar.md  README.md  accessibility-guide.md  architecture.md  (+40 more)
(+331 files in other folders)
